fix gap

--- a/assets/css/lektor.css
+++ b/assets/css/lektor.css
@@ -216,7 +216,7 @@ header .action {
 	}
 
 	.menus .topnav{
-		row-gap: 2em;
+		grid-row-gap: 2em;
 		grid-gap: 2%;
 		margin-top: 2em;
 	}
